--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,13 +1,19 @@
 @import "functionFontSize";
 
 .buh {
-  position: fixed;
-  width: 100%;
   padding: 20px;
-  z-index: 2;
   
   & nav {
     width: 100%;
+    
+    @media (max-width: 992px) {
+      display: flex;
+    }
+  
+    @media (max-width: 776px) {
+      display: flex;
+    }
+    
     & ul {
       @media (max-width: 992px) {
         display: none;
@@ -16,38 +22,89 @@
   }
   
   &__burger {
+    @media (max-width: 1116px) {
+      display: none;
+    }
+    
     @media (max-width: 992px) {
-      
       display: block;
       position: relative;
       width: 30px;
       margin-left: auto;
+    }
+  }
+  #buh__toggle {
+    opacity: 0;
+    
+    &:checked ~ .buh__burger_btn > span {
+      transform: rotate(45deg);
       
-      & span {
-        position: absolute;
-        left: 0;
-        width: 100%;
-        height: 3px;
-        top: 10px;
-      }
-      
-      &:before,
-      &:after {
-        content: '';
-        position: absolute;
-        width: 100%;
-        height: 3px;
-        left: 0;
-      }
-      
-      &:before {
+      &::before {
         top: 0;
+        transform: rotate(0);
       }
       
-      &:after {
-        bottom: 7px;
+      &::after {
+        top: 0;
+        transform: rotate(90deg);
       }
     }
+    
+    &:checked ~ .buh__box {
+      visibility: visible;
+    }
+  }
+  
+  .buh__burger_btn {
+      display: flex;
+      align-items: center;
+      position: fixed;
+      width: 26px;
+      cursor: pointer;
+      z-index: 2;
+    
+    & span, & span::before,
+    & span::after {
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 3px;
+      transition-duration: 1.25s;
+    }
+    
+    & span::before {
+      content: '';
+      top: -8px;
+    }
+    
+    & span::after {
+      content: '';
+      top: 8px;
+    }
+  }
+  
+  .buh__box {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 0;
+    right: 0;
+    width: 200px;
+    height: 100%;
+    margin: 0;
+    padding: 80px 0;
+    list-style: none;
+    transition-duration: .75s;
+  }
+  
+  .buh__item {
+    display: block;
+    padding: 12px 24px;
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+    transition-duration: .25s;
   }
   
   &__info {
