--- a/src/scss/heading.scss
+++ b/src/scss/heading.scss
@@ -2,7 +2,7 @@
 @import "funcWidth";
 
 .heading {
-  margin: 110px auto 0 auto;
+  //margin: 110px auto 0 auto;
   background-image: url('../img/background.png');
   background-size: cover;
   
