--- a/src/scss/styless.css
+++ b/src/scss/styless.css
@@ -96,14 +96,14 @@ html, body {
 .buh a {
   color: #000;
 }
-.buh .buh__burger span {
-  background-color: #000;
+.buh .buh__burger span, .buh .buh__burger span::before, .buh .buh__burger span::after {
+  background-color: #616161;
 }
-.buh .buh__burger:before {
-  background-color: #000;
+.buh .buh__burger .buh__item:hover {
+  background-color: #CFD8DC;
 }
-.buh .buh__burger:after {
-  background-color: #000;
+.buh .buh__burger .buh__box {
+  background-color: #ECEFF1;
 }
 
 .heading h1 {
@@ -194,16 +194,28 @@ html, body {
 }
 
 .buh {
-  position: fixed;
-  width: 100%;
   padding: 20px;
-  z-index: 2;
 }
 .buh nav {
   width: 100%;
 }
 @media (max-width: 992px) {
+  .buh nav {
+    display: flex;
+  }
+}
+@media (max-width: 776px) {
+  .buh nav {
+    display: flex;
+  }
+}
+@media (max-width: 992px) {
   .buh nav ul {
+    display: none;
+  }
+}
+@media (max-width: 1116px) {
+  .buh__burger {
     display: none;
   }
 }
@@ -214,26 +226,68 @@ html, body {
     width: 30px;
     margin-left: auto;
   }
-  .buh__burger span {
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 3px;
-    top: 10px;
-  }
-  .buh__burger:before, .buh__burger:after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 3px;
-    left: 0;
-  }
-  .buh__burger:before {
-    top: 0;
-  }
-  .buh__burger:after {
-    bottom: 7px;
-  }
+}
+.buh #buh__toggle {
+  opacity: 0;
+}
+.buh #buh__toggle:checked ~ .buh__burger_btn > span {
+  transform: rotate(45deg);
+}
+.buh #buh__toggle:checked ~ .buh__burger_btn > span::before {
+  top: 0;
+  transform: rotate(0);
+}
+.buh #buh__toggle:checked ~ .buh__burger_btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+.buh #buh__toggle:checked ~ .buh__box {
+  visibility: visible;
+}
+.buh .buh__burger_btn {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  width: 26px;
+  cursor: pointer;
+  z-index: 2;
+}
+.buh .buh__burger_btn span, .buh .buh__burger_btn span::before, .buh .buh__burger_btn span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  transition-duration: 1.25s;
+}
+.buh .buh__burger_btn span::before {
+  content: "";
+  top: -8px;
+}
+.buh .buh__burger_btn span::after {
+  content: "";
+  top: 8px;
+}
+.buh .buh__box {
+  display: block;
+  position: fixed;
+  visibility: hidden;
+  top: 0;
+  right: 0;
+  width: 200px;
+  height: 100%;
+  margin: 0;
+  padding: 80px 0;
+  list-style: none;
+  transition-duration: 0.75s;
+}
+.buh .buh__item {
+  display: block;
+  padding: 12px 24px;
+  font-family: "Lato", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+  transition-duration: 0.25s;
 }
 .buh__info {
   display: flex;
@@ -280,7 +334,6 @@ html, body {
 }
 
 .heading {
-  margin: 110px auto 0 auto;
   background-image: url("../img/background.png");
   background-size: cover;
 }
