--- a/src/scss/client.scss
+++ b/src/scss/client.scss
@@ -21,6 +21,11 @@
       margin-top: 100px;
       font-weight: 900;
       font-size: rem(24px);
+      padding-left: 5px;
+  
+      @media (max-width: 415px){
+        font-size: rem(18px);
+      }
     }
     
     & h2 {
@@ -28,6 +33,10 @@
       font-family: 'Merriweather', sans-serif;
       font-weight: 900;
       font-size: rem(48px);
+  
+      @media (max-width: 415px){
+        font-size: rem(24px);
+      }
     }
     
     .client__mcr {
@@ -53,11 +62,21 @@
         justify-content: space-between;
         margin-top: 50px;
         width: width(1116px);
+  
+        @media (max-width: 415px){
+          flex-direction: column;
+          align-items: center;
+        }
       }
       
       &-circle {
         display: flex;
         padding-top: 40px;
+        cursor: pointer;
+  
+        @media (max-width: 415px){
+          margin-bottom: 33px;
+        }
       }
     
       &-item {
@@ -65,13 +84,13 @@
         height: 10px;
         border-radius: 5px;
         opacity: 40%;
+  
+        &:hover {
+          opacity: 100%;
+        }
       
         &:nth-child(n + 2):nth-child(-n + 4) {
           margin-left: 40px;
-        }
-      
-        &.client__mcr-act {
-          opacity: 100%;
         }
       }
     
@@ -81,12 +100,20 @@
         margin-bottom: 100px;
       
         &-left {
-          opacity: 80%;
+          opacity: 20%;
+  
+          &:hover {
+            opacity: 100%;
+          }
         }
       
         &-right {
           margin: 0 -2.5px;
-          opacity: 100%;
+          opacity: 20%;
+  
+          &:hover {
+            opacity: 100%;
+          }
         }
       }
     }
