--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -33,6 +33,7 @@
   
   &__main {
     width: width(558px);
+    padding-left: 5px;
   
     @media (max-width: 992px) {
       width: 100%
@@ -48,6 +49,10 @@
       font-family: 'Merriweather', sans-serif;
       font-weight: 900;
       font-size: rem(48px);
+  
+      @media (max-width: 415px){
+        font-size: rem(24px);
+      }
     }
     
     p {
@@ -55,6 +60,10 @@
       font-weight: 300;
       font-size: rem(18px);
       line-height: 25px;
+  
+      @media (max-width: 415px){
+        font-size: rem(14px);
+      }
     }
   }
   
@@ -75,10 +84,14 @@
     }
     
     & a {
-      margin-left: 15px;
+      margin-left: 9px;
       font-weight: 300;
       font-size: rem(21px);
       line-height: 29px;
+  
+      @media (max-width: 415px){
+        font-size: rem(12px);
+      }
     }
   }
   
@@ -97,6 +110,11 @@
     & p {
       font-weight: normal;
       font-size: rem(16px);
+  
+      @media (max-width: 415px){
+        font-size: rem(14px);
+        width: 90%;
+      }
     }
     
     & h5 {
@@ -104,12 +122,24 @@
       font-size: rem(21px);
       opacity: 50%;
       padding: 15px 0 ;
+  
+      @media (max-width: 415px){
+        font-size: rem(15px);
+      }
     }
     
     hr {
       width: 250px;
       height: 0;
       border: 1px solid #FFF;
+      
+      @media (max-width: 992px) {
+        width: 200px;
+      }
+  
+      @media (max-width: 415px){
+        width: 150px
+      }
     }
     
     &_info {
@@ -135,6 +165,10 @@
       
       @media (max-width: 776px) {
         margin-top: 35px;
+      }
+  
+      @media (max-width: 415px){
+        width: 150px
       }
     }
   }
