--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -4,14 +4,17 @@
   padding: 20px;
   
   & nav {
-    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
     
     @media (max-width: 992px) {
       display: flex;
+      width: 100%;
     }
   
     @media (max-width: 776px) {
       display: flex;
+      width: 100%;
     }
     
     & ul {
@@ -22,9 +25,7 @@
   }
   
   &__burger {
-    @media (max-width: 1116px) {
-      display: none;
-    }
+    display: none;
     
     @media (max-width: 992px) {
       display: block;
@@ -58,10 +59,9 @@
   .buh__burger_btn {
       display: flex;
       align-items: center;
-      position: fixed;
       width: 26px;
       cursor: pointer;
-      z-index: 2;
+      z-index: 3;
     
     & span, & span::before,
     & span::after {
@@ -70,6 +70,7 @@
       width: 100%;
       height: 3px;
       transition-duration: 1.25s;
+      z-index: 4;
     }
     
     & span::before {
@@ -110,6 +111,7 @@
   &__info {
     display: flex;
     justify-content: flex-end;
+    width: 100%;
     
     & li {
       padding-right: 42px;
@@ -131,7 +133,7 @@
   
   &__logo {
     &_text {
-      margin: 0 30px;
+      margin-left: 20px;
       vertical-align: super;
     }
   }
@@ -141,6 +143,7 @@
     justify-content: flex-end;
     text-transform: uppercase;
     font-size: rem(14px);
+    width: 100%;
     
     & li {
       padding-right: 82px;
