--- a/src/scss/heading.scss
+++ b/src/scss/heading.scss
@@ -2,7 +2,6 @@
 @import "funcWidth";
 
 .heading {
-  //margin: 110px auto 0 auto;
   background-image: url('../img/background.png');
   background-size: cover;
   
@@ -24,6 +23,10 @@
     font-weight: 700;
     margin-top: 170px;
     line-height: 59px;
+  
+    @media (max-width: 415px) {
+      font-size: rem(24px);
+    }
   }
   
   &__btn {
@@ -46,10 +49,16 @@
       display: flex;
       justify-content: space-around;
     }
+  
+    @media (max-width: 415px) {
+      flex-direction: column;
+      align-items: center;
+    }
     
     &-circle {
       display: flex;
       padding-top: 40px;
+      cursor: pointer;
     }
     
     &-item {
@@ -58,25 +67,37 @@
       border-radius: 5px;
       opacity: 40%;
       
-      &:nth-child(n + 2):nth-child(-n + 4) {
-        margin-left: 40px;
+      &:hover {
+        opacity: 100%;
       }
       
-      &.heading__arrow-act {
-        opacity: 100%;
+      &:nth-child(n + 2):nth-child(-n + 4) {
+        margin-left: 40px;
       }
     }
     
     .arrow {
       margin-bottom: 113px;
       
-      &-left {
-        opacity: 80%;
+      @media (max-width: 415px) {
+        margin-bottom: 80px;
+        margin-top: 33px;
       }
       
+      &-left {
+        opacity: 20%;
+        
+        &:hover {
+          opacity: 100%;
+        }
+      }
+
       &-right {
         margin: 0 -2.5px;
-        opacity: 100%;
+          opacity: 20%;
+        &:hover {
+          opacity: 100%;
+        }
       }
     }
   }
