--- a/src/scss/styless.css
+++ b/src/scss/styless.css
@@ -96,11 +96,11 @@ html, body {
 .buh a {
   color: #000;
 }
+.buh a:hover {
+  color: #005FA3;
+}
 .buh .buh__burger span, .buh .buh__burger span::before, .buh .buh__burger span::after {
   background-color: #616161;
-}
-.buh .buh__burger .buh__item:hover {
-  background-color: #CFD8DC;
 }
 .buh .buh__burger .buh__box {
   background-color: #ECEFF1;
@@ -126,6 +126,12 @@ html, body {
 .services p {
   color: #fff;
 }
+.services .services__items-blck {
+  background: url("../img/buhblacksix.png");
+}
+.services .services__items-blck:hover {
+  background: url("../img/buhsix.png");
+}
 
 .about {
   background: #F9F9F9;
@@ -133,20 +139,21 @@ html, body {
 .about__items-grey a {
   color: #005FA3;
 }
-.about__items-blue a {
-  color: #fff;
-}
 .about h3 {
   color: #BDBDBD;
 }
 .about__main span {
   color: #005FA3;
 }
+.about .about__items .about-blue {
+  color: #005FA3;
+}
 .about .about__items-grey {
   background: #EBEBEB;
 }
-.about .about__items-blue {
+.about .about__items-grey:hover {
   background: #005FA3;
+  color: #fff;
 }
 
 .client {
@@ -197,16 +204,19 @@ html, body {
   padding: 20px;
 }
 .buh nav {
-  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
 }
 @media (max-width: 992px) {
   .buh nav {
     display: flex;
+    width: 100%;
   }
 }
 @media (max-width: 776px) {
   .buh nav {
     display: flex;
+    width: 100%;
   }
 }
 @media (max-width: 992px) {
@@ -214,10 +224,8 @@ html, body {
     display: none;
   }
 }
-@media (max-width: 1116px) {
-  .buh__burger {
-    display: none;
-  }
+.buh__burger {
+  display: none;
 }
 @media (max-width: 992px) {
   .buh__burger {
@@ -247,10 +255,9 @@ html, body {
 .buh .buh__burger_btn {
   display: flex;
   align-items: center;
-  position: fixed;
   width: 26px;
   cursor: pointer;
-  z-index: 2;
+  z-index: 3;
 }
 .buh .buh__burger_btn span, .buh .buh__burger_btn span::before, .buh .buh__burger_btn span::after {
   display: block;
@@ -258,6 +265,7 @@ html, body {
   width: 100%;
   height: 3px;
   transition-duration: 1.25s;
+  z-index: 4;
 }
 .buh .buh__burger_btn span::before {
   content: "";
@@ -292,6 +300,7 @@ html, body {
 .buh__info {
   display: flex;
   justify-content: flex-end;
+  width: 100%;
 }
 .buh__info li {
   padding-right: 42px;
@@ -307,7 +316,7 @@ html, body {
   padding-right: 6px;
 }
 .buh__logo_text {
-  margin: 0 30px;
+  margin-left: 20px;
   vertical-align: super;
 }
 .buh__link {
@@ -315,6 +324,7 @@ html, body {
   justify-content: flex-end;
   text-transform: uppercase;
   font-size: 1rem;
+  width: 100%;
 }
 .buh__link li {
   padding-right: 82px;
@@ -356,6 +366,11 @@ html, body {
   margin-top: 170px;
   line-height: 59px;
 }
+@media (max-width: 415px) {
+  .heading h1 {
+    font-size: 1.7142857143rem;
+  }
+}
 .heading__btn {
   margin: 80px 0;
 }
@@ -376,9 +391,16 @@ html, body {
     justify-content: space-around;
   }
 }
+@media (max-width: 415px) {
+  .heading .heading__arrow {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .heading .heading__arrow-circle {
   display: flex;
   padding-top: 40px;
+  cursor: pointer;
 }
 .heading .heading__arrow-item {
   width: 10px;
@@ -386,20 +408,32 @@ html, body {
   border-radius: 5px;
   opacity: 40%;
 }
+.heading .heading__arrow-item:hover {
+  opacity: 100%;
+}
 .heading .heading__arrow-item:nth-child(n+2):nth-child(-n+4) {
   margin-left: 40px;
-}
-.heading .heading__arrow-item.heading__arrow-act {
-  opacity: 100%;
 }
 .heading .heading__arrow .arrow {
   margin-bottom: 113px;
 }
+@media (max-width: 415px) {
+  .heading .heading__arrow .arrow {
+    margin-bottom: 80px;
+    margin-top: 33px;
+  }
+}
 .heading .heading__arrow .arrow-left {
-  opacity: 80%;
+  opacity: 20%;
+}
+.heading .heading__arrow .arrow-left:hover {
+  opacity: 100%;
 }
 .heading .heading__arrow .arrow-right {
   margin: 0 -2.5px;
+  opacity: 20%;
+}
+.heading .heading__arrow .arrow-right:hover {
   opacity: 100%;
 }
 
@@ -410,31 +444,46 @@ html, body {
 .services__column {
   flex-direction: column;
 }
-@media (max-width: 992px) {
-  .services__column {
-    align-items: center;
-  }
-}
 .services__column h3 {
-  margin-top: 140px;
+  margin: 140px 0 0 5px;
   font-size: 1.7142857143rem;
   font-weight: 900;
 }
+@media (max-width: 415px) {
+  .services__column h3 {
+    font-size: 1.2857142857rem;
+    margin: 40px 0 0 5px;
+  }
+}
 .services__column h2 {
-  margin: 40px 0 72px 0;
+  margin: 40px 0 72px 5px;
   font-family: "Merriweather", sans-serif;
   font-weight: 900;
   font-size: 3.4285714286rem;
 }
+@media (max-width: 415px) {
+  .services__column h2 {
+    font-size: 1.7142857143rem;
+    margin: 40px 0 20px 5px;
+  }
+}
 .services__column .services__items {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-top: 30px;
+  flex-wrap: wrap;
+  cursor: pointer;
 }
 @media (max-width: 992px) {
   .services__column .services__items {
     flex-wrap: wrap;
-    flex-direction: column;
+    justify-content: space-around;
+  }
+}
+@media (max-width: 776px) {
+  .services__column .services__items {
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
 }
 .services__column .services__items p {
@@ -442,22 +491,9 @@ html, body {
   font-weight: 900;
   margin: 261px 118px 45px 45px;
 }
-.services__column .services__items-blue {
-  width: 31.3620071685%;
-  height: 360px;
-  background-image: url("../img/buhsix.png");
-  background-size: cover;
-}
-@media (max-width: 992px) {
-  .services__column .services__items-blue {
-    width: auto;
-    margin-bottom: 30px;
-  }
-}
 .services__column .services__items-blck {
   width: 31.3620071685%;
   height: 360px;
-  background-image: url("../img/buhblacksix.png");
   background-size: cover;
 }
 @media (max-width: 992px) {
@@ -465,6 +501,9 @@ html, body {
     width: auto;
     margin-bottom: 30px;
   }
+}
+.services__column .services__items .top {
+  margin-bottom: 30px;
 }
 
 html, body {
@@ -476,11 +515,6 @@ html, body {
   align-content: flex-start;
 }
 @media (max-width: 992px) {
-  .about__wrap {
-    flex-wrap: wrap;
-  }
-}
-@media (max-width: 776px) {
   .about__wrap {
     flex-wrap: wrap;
   }
@@ -502,10 +536,21 @@ html, body {
   font-weight: 900;
   line-height: 33px;
 }
+@media (max-width: 415px) {
+  .about__me {
+    margin-top: 40px;
+  }
+}
 .about__me h3 {
   width: 100%;
   font-size: 1.7142857143rem;
   font-weight: 900;
+  padding-left: 5px;
+}
+@media (max-width: 415px) {
+  .about__me h3 {
+    font-size: 1.2857142857rem;
+  }
 }
 .about__main {
   width: 50%;
@@ -529,6 +574,12 @@ html, body {
   font-weight: 900;
   font-size: 3.4285714286rem;
 }
+@media (max-width: 415px) {
+  .about__main h2 {
+    font-size: 1.7142857143rem;
+    line-height: 29px;
+  }
+}
 .about__main p {
   margin-top: 60px;
   margin-bottom: 219px;
@@ -536,6 +587,7 @@ html, body {
   font-weight: 300;
   width: 79.7491039427%;
   line-height: 25px;
+  margin-left: 10px;
 }
 @media (max-width: 992px) {
   .about__main p {
@@ -547,12 +599,20 @@ html, body {
     margin-bottom: 30px;
   }
 }
+@media (max-width: 415px) {
+  .about__main p {
+    font-size: 0.8571428571rem;
+    margin-top: 30px;
+  }
+}
 .about__case {
   width: 50%;
+  padding: 0 5px;
 }
 @media (max-width: 992px) {
   .about__case {
     width: 100%;
+    padding-right: 5px;
   }
 }
 @media (max-width: 776px) {
@@ -565,6 +625,11 @@ html, body {
   font-size: 3.9285714286rem;
   line-height: 66px;
   font-weight: 900;
+}
+@media (max-width: 415px) {
+  .about__case h2 {
+    font-size: 1.7142857143rem;
+  }
 }
 .about__case p {
   margin: 30px 0 47px 40px;
@@ -581,7 +646,8 @@ html, body {
 }
 .about__items {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  cursor: pointer;
 }
 @media (max-width: 992px) {
   .about__items {
@@ -623,12 +689,23 @@ html, body {
   margin-top: 100px;
   font-weight: 900;
   font-size: 1.7142857143rem;
+  padding-left: 5px;
+}
+@media (max-width: 415px) {
+  .client__column h3 {
+    font-size: 1.2857142857rem;
+  }
 }
 .client__column h2 {
   margin: 40px 0 0 2px;
   font-family: "Merriweather", sans-serif;
   font-weight: 900;
   font-size: 3.4285714286rem;
+}
+@media (max-width: 415px) {
+  .client__column h2 {
+    font-size: 1.7142857143rem;
+  }
 }
 .client__column .client__mcr_pic {
   display: flex;
@@ -653,9 +730,21 @@ html, body {
   margin-top: 50px;
   width: 100%;
 }
+@media (max-width: 415px) {
+  .client__column .client__mcr .client__mcr-line {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .client__column .client__mcr-circle {
   display: flex;
   padding-top: 40px;
+  cursor: pointer;
+}
+@media (max-width: 415px) {
+  .client__column .client__mcr-circle {
+    margin-bottom: 33px;
+  }
 }
 .client__column .client__mcr-item {
   width: 10px;
@@ -663,11 +752,11 @@ html, body {
   border-radius: 5px;
   opacity: 40%;
 }
+.client__column .client__mcr-item:hover {
+  opacity: 100%;
+}
 .client__column .client__mcr-item:nth-child(n+2):nth-child(-n+4) {
   margin-left: 40px;
-}
-.client__column .client__mcr-item.client__mcr-act {
-  opacity: 100%;
 }
 .client__column .client__mcr .client__arrow {
   display: flex;
@@ -675,10 +764,16 @@ html, body {
   margin-bottom: 100px;
 }
 .client__column .client__mcr .client__arrow-left {
-  opacity: 80%;
+  opacity: 20%;
+}
+.client__column .client__mcr .client__arrow-left:hover {
+  opacity: 100%;
 }
 .client__column .client__mcr .client__arrow-right {
   margin: 0 -2.5px;
+  opacity: 20%;
+}
+.client__column .client__mcr .client__arrow-right:hover {
   opacity: 100%;
 }
 
@@ -704,12 +799,24 @@ html, body {
   margin-top: 100px;
   font-weight: 900;
   font-size: 1.7142857143rem;
+  padding-left: 5px;
+}
+@media (max-width: 415px) {
+  .feedback__column h3 {
+    font-size: 1.2857142857rem;
+    margin-top: 50px;
+  }
 }
 .feedback__column h2 {
   margin: 40px 0 0 2px;
   font-family: "Merriweather", sans-serif;
   font-weight: 900;
   font-size: 3.4285714286rem;
+}
+@media (max-width: 415px) {
+  .feedback__column h2 {
+    font-size: 1.7142857143rem;
+  }
 }
 .feedback__column .feedback__content {
   width: 99.4623655914%;
@@ -732,9 +839,19 @@ html, body {
     margin: 10px auto;
   }
 }
+@media (max-width: 415px) {
+  .feedback__column .feedback__content p {
+    font-size: 0.8571428571rem;
+  }
+}
 .feedback__column .feedback__content-line {
   display: flex;
   margin: 0 0 45px 95px;
+}
+@media (max-width: 415px) {
+  .feedback__column .feedback__content-line {
+    margin: 0 20px;
+  }
 }
 .feedback__column .feedback__content-line .feedback__content-info {
   margin-left: 35px;
@@ -745,14 +862,31 @@ html, body {
   font-size: 1.2857142857rem;
   line-height: 25px;
 }
+@media (max-width: 415px) {
+  .feedback__column .feedback__content-line .feedback__content-info h5 {
+    font-size: 0.8571428571rem;
+  }
+}
 .feedback__column .feedback__line {
   display: flex;
   justify-content: space-between;
   margin-top: 50px;
 }
+@media (max-width: 415px) {
+  .feedback__column .feedback__line {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .feedback__column .feedback__line-circle {
   display: flex;
   padding-top: 40px;
+  cursor: pointer;
+}
+@media (max-width: 415px) {
+  .feedback__column .feedback__line-circle {
+    margin-bottom: 33px;
+  }
 }
 .feedback__column .feedback__line-item {
   width: 10px;
@@ -760,11 +894,11 @@ html, body {
   border-radius: 5px;
   opacity: 40%;
 }
+.feedback__column .feedback__line-item:hover {
+  opacity: 100%;
+}
 .feedback__column .feedback__line-item:nth-child(n+2):nth-child(-n+4) {
   margin-left: 40px;
-}
-.feedback__column .feedback__line-item.feedback__line-act {
-  opacity: 100%;
 }
 .feedback__column .feedback__line .feedback__arrow {
   margin-bottom: 100px;
@@ -772,8 +906,14 @@ html, body {
 .feedback__column .feedback__line .feedback__arrow-left {
   opacity: 80%;
 }
+.feedback__column .feedback__line .feedback__arrow-left:hover {
+  opacity: 100%;
+}
 .feedback__column .feedback__line .feedback__arrow-right {
   margin: 0 -2.5px;
+  opacity: 20%;
+}
+.feedback__column .feedback__line .feedback__arrow-right:hover {
   opacity: 100%;
 }
 
@@ -817,6 +957,7 @@ html, body {
 }
 .footer__main {
   width: 50%;
+  padding-left: 5px;
 }
 @media (max-width: 992px) {
   .footer__main {
@@ -835,11 +976,21 @@ html, body {
   font-weight: 900;
   font-size: 3.4285714286rem;
 }
+@media (max-width: 415px) {
+  .footer__main h2 {
+    font-size: 1.7142857143rem;
+  }
+}
 .footer__main p {
   margin: 60px 0 79px 0;
   font-weight: 300;
   font-size: 1.2857142857rem;
   line-height: 25px;
+}
+@media (max-width: 415px) {
+  .footer__main p {
+    font-size: 1rem;
+  }
 }
 .footer .footer__info {
   display: flex;
@@ -859,10 +1010,15 @@ html, body {
   margin-left: 45px;
 }
 .footer .footer__info a {
-  margin-left: 15px;
+  margin-left: 9px;
   font-weight: 300;
   font-size: 1.5rem;
   line-height: 29px;
+}
+@media (max-width: 415px) {
+  .footer .footer__info a {
+    font-size: 0.8571428571rem;
+  }
 }
 .footer .footer__form {
   margin-top: 135px;
@@ -882,16 +1038,37 @@ html, body {
   font-weight: normal;
   font-size: 1.1428571429rem;
 }
+@media (max-width: 415px) {
+  .footer .footer__form p {
+    font-size: 1rem;
+    width: 90%;
+  }
+}
 .footer .footer__form h5 {
   font-weight: 300;
   font-size: 1.5rem;
   opacity: 50%;
   padding: 15px 0;
 }
+@media (max-width: 415px) {
+  .footer .footer__form h5 {
+    font-size: 1.0714285714rem;
+  }
+}
 .footer .footer__form hr {
   width: 250px;
   height: 0;
   border: 1px solid #FFF;
+}
+@media (max-width: 992px) {
+  .footer .footer__form hr {
+    width: 200px;
+  }
+}
+@media (max-width: 415px) {
+  .footer .footer__form hr {
+    width: 150px;
+  }
 }
 .footer .footer__form_info {
   display: flex;
@@ -915,6 +1092,11 @@ html, body {
 @media (max-width: 776px) {
   .footer .footer__info_message hr {
     margin-top: 35px;
+  }
+}
+@media (max-width: 415px) {
+  .footer .footer__info_message hr {
+    width: 150px;
   }
 }
 .footer .footer__btn {
