--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,7 +1,7 @@
 @import "functionFontSize";
 
 .buh {
-  padding: 20px;
+  padding: 20px 5px;
   
   & nav {
     display: flex;
@@ -142,7 +142,6 @@
     display: flex;
     justify-content: flex-end;
     text-transform: uppercase;
-    font-size: rem(14px);
     width: 100%;
     
     & li {
