--- a/src/scss/styless.scss
+++ b/src/scss/styless.scss
@@ -1,7 +1,7 @@
 @import "reset";
 @import "colors";
 @import "header";
-@import "heading";
+@import "preview";
 @import "services";
 @import "about";
 @import "client";
