--- a/src/scss/feedback.scss
+++ b/src/scss/feedback.scss
@@ -1,149 +1,98 @@
 @import "functionFontSize";
 @import "funcWidth";
 
-.feedback {
+.gratitude {
   
-  &__column.container {
-    @media (max-width: 992px) {
-      max-width: 600px;
-    }
+  &__title-top {
+    margin-top: rem(100px);
+    font-weight: 900;
+    font-size: rem(24px);
     
-    @media (max-width: 776px) {
-      max-width: 600px;
-    }
-  }
-  
-  &__column {
-    flex-direction: column;
-    
-    & h3 {
-      margin-top: 100px;
-      font-weight: 900;
-      font-size: rem(24px);
-      padding-left: 5px;
-  
-      @media (max-width: 415px){
-        font-size: rem(18px);
-        margin-top: 50px;
-      }
-    }
-    
-    & h2 {
-      margin: 40px 0 0 2px;
-      font-family: 'Merriweather', sans-serif;
-      font-weight: 900;
-      font-size: rem(48px);
-  
-      @media (max-width: 415px){
-        font-size: rem(24px);
-      }
-    }
-    
-    .feedback__content {
-      width: width(1110px);
-      margin-top: 80px;
-  
-      @media (max-width: 776px) {
-        margin-top: 50px;
-      }
-      
-      p {
-        width: width(920px);
-        margin: 45px 0 58px 95px;
-        font-weight: 300;
-        font-size: rem(18px);
-        line-height: 25px;
-  
-        @media (max-width: 776px) {
-          margin: 10px auto;
-        }
-  
-        @media (max-width: 415px){
-          font-size: rem(12px);
-        }
-      }
-      
-      &-line {
-        display: flex;
-        margin: 0 0 45px 95px;
-  
-        @media (max-width: 415px){
-          margin: 0 20px;
-        }
-        
-        .feedback__content-info {
-          margin-left: 35px;
-          
-          h5 {
-            margin-bottom: 10px;
-            font-weight: 900;
-            font-size: rem(18px);
-            line-height: 25px;
-  
-            @media (max-width: 415px){
-              font-size: rem(12px);
-            }
-          }
-        }
-      }
-    }
-    
-    .feedback__line {
+    @media (max-width: 980px) {
       display: flex;
-      justify-content: space-between;
-      margin-top: 50px;
-      
-      @media (max-width: 415px){
-        flex-direction: column;
-        align-items: center;
-      }
-     
-      &-circle {
-        display: flex;
-        padding-top: 40px;
-        cursor: pointer;
-        
-        @media (max-width: 415px){
-          margin-bottom: 33px;
-        }
-      }
-      
-      &-item {
-        width: 10px;
-        height: 10px;
-        border-radius: 5px;
-        opacity: 40%;
-  
-        &:hover {
-          opacity: 100%;
-        }
-
-        &:nth-child(n + 2):nth-child(-n + 4) {
-          margin-left: 40px;
-        }
-      }
-      
-      .feedback__arrow {
-        margin-bottom: 100px;
-        
-        &-left {
-          opacity: 80%;
-  
-          &:hover {
-            opacity: 100%;
-          }
-        }
-
-        &-right {
-          margin: 0 -2.5px;
-          opacity: 20%;
-  
-          &:hover {
-            opacity: 100%;
-          }
-        }
-      }
+      justify-content: center;
+    }
+    
+    @media (max-width: 720px) {
+      font-size: rem(18px);
     }
   }
   
+  &__title {
+    margin: rem(40px) 0 0 rem(2px);
+    font-family: 'Merriweather', sans-serif;
+    font-weight: 900;
+    font-size: rem(48px);
+    
+    @media (max-width: 980px) {
+      display: flex;
+      justify-content: center;
+    }
+    
+    @media (max-width: 720px) {
+      font-size: rem(26px);
+    }
+    
+    @media (max-width: 415px) {
+      font-size: rem(22px);
+    }
+  }
+}
+
+.gratitude__business-card {
+  margin-top: rem(80px);
+  
+  @media (max-width: 776px) {
+    margin-top: rem(50px);
+  }
+}
+
+.business-card__text {
+  width: 920px / 1116px * 100%;
+  margin: rem(45px) 0 rem(58px) rem(95px);
+  font-weight: 300;
+  font-size: rem(18px);
+  line-height: rem(25px);
+  padding-top: rem(45px);
+  
+  @media (max-width: 776px) {
+    margin: 15px auto;
+    font-size: rem(14px);
+  }
+  
+  @media (max-width: 415px) {
+    font-size: rem(12px);
+  }
+}
+
+.manager {
+  display: flex;
+  padding-bottom: rem(62px);
+}
+
+.business-card__manager {
+  margin: 0 0 rem(45px) rem(95px);
+  
+  @media (max-width: 780px) {
+    margin: 0 rem(28px);
+  }
+}
+
+.manager__info {
+  margin-left: rem(35px);
+  
+  @media (max-width: 415px) {
+    margin: 0 auto;
+  }
+}
+
+.info__title {
+  margin-bottom: rem(10px);
+  font-weight: 900;
+  font-size: rem(18px);
+  line-height: rem(25px);
+  
+  @media (max-width: 415px) {
+    font-size: rem(12px);
+  }
 }
