--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -4,185 +4,195 @@
 .footer {
   background: url('../img/blackBackground.png');
   background-size: cover;
+}
+
+.connection {
+  display: flex;
+  margin-top: rem(122px);
   
-  &__row {
-    @media (max-width: 992px) {
-      flex-wrap: wrap;
-      flex-direction: column;
-    }
-    
-    @media (max-width: 776px) {
-      flex-wrap: wrap;
-      flex-direction: column;
-    }
-  }
-  
-  &__row.container {
-    @media (max-width: 992px) {
-      max-width: 600px;
-    }
-    
-    @media (max-width: 776px) {
-      max-width: 600px;
-    }
-  }
-  
-  &__main {
-    width: width(558px);
-    padding-left: 5px;
-  
-    @media (max-width: 992px) {
-      width: 100%
-    }
-    
-    @media (max-width: 776px) {
-      width: 100%
-    }
-    
-    h2 {
-      width: width-half(442px);
-      margin: 122px 0 0 2px;
-      font-family: 'Merriweather', sans-serif;
-      font-weight: 900;
-      font-size: rem(48px);
-  
-      @media (max-width: 415px){
-        font-size: rem(24px);
-      }
-    }
-    
-    p {
-      margin: 60px 0 79px 0;
-      font-weight: 300;
-      font-size: rem(18px);
-      line-height: 25px;
-  
-      @media (max-width: 415px){
-        font-size: rem(14px);
-      }
-    }
-  }
-  
-  .footer__info {
+  @media (max-width: 1115px) {
+    width: 100%;
     display: flex;
-    margin-bottom: 242px;
-  
-    @media (max-width: 992px) {
-      margin-bottom: 20px;
-    }
-    
-    @media (max-width: 776px) {
-      margin-bottom: 20px;
-    }
-    
-    &_right {
-      margin-left: 45px;
-    }
-    
-    & a {
-      margin-left: 9px;
-      font-weight: 300;
-      font-size: rem(21px);
-      line-height: 29px;
-  
-      @media (max-width: 415px){
-        font-size: rem(12px);
-      }
-    }
+    align-items: center;
+    flex-direction: column;
   }
+}
+
+.info-card {
+  width: 72%;
   
-  .footer__form {
-    margin-top: 135px;
-    width: 50%;
+  &__title {
+    width: rem(442px) / rem(558px) * 100%;
+    font-family: 'Merriweather', sans-serif;
+    font-weight: 900;
+    font-size: rem(48px);
   
-    @media (max-width: 992px) {
-      margin-top: 30px;
-    }
-    
-    @media (max-width: 776px) {
-      margin-top: 30px;
-    }
-    
-    & p {
-      font-weight: normal;
-      font-size: rem(16px);
-  
-      @media (max-width: 415px){
-        font-size: rem(14px);
-        width: 90%;
-      }
-    }
-    
-    & h5 {
-      font-weight: 300;
-      font-size: rem(21px);
-      opacity: 50%;
-      padding: 15px 0 ;
-  
-      @media (max-width: 415px){
-        font-size: rem(15px);
-      }
-    }
-    
-    hr {
-      width: 250px;
-      height: 0;
-      border: 1px solid #FFF;
-      
-      @media (max-width: 992px) {
-        width: 200px;
-      }
-  
-      @media (max-width: 415px){
-        width: 150px
-      }
-    }
-    
-    &_info {
+    @media (max-width: 1115px) {
+      width: 100%;
       display: flex;
-      width: width-half(255px);
-      
-      li {
-        margin: 0 5px 0 25px;
-      }
+      justify-content: center;
+    }
+  
+    @media (max-width: 720px) {
+      font-size: rem(22px);
+      justify-content: space-around;
     }
   }
   
-  .footer__info_message {
-    margin: 35px 0 0 25px;
-    
-    hr {
-      margin-top: 70px;
-      width: 100%;
-  
-      @media (max-width: 992px) {
-        margin-top: 35px;
-      }
-      
-      @media (max-width: 776px) {
-        margin-top: 35px;
-      }
-  
-      @media (max-width: 415px){
-        width: 150px
-      }
-    }
-  }
-  
-  .footer__btn {
-    width: width-half(270px);
-    height: 60px;
-    margin: 50px 0 0 288px;
+  &__text {
+    margin: rem(60px) 0 rem(79px) 0;
+    font-weight: 300;
     font-size: rem(18px);
+    line-height: rem(25px);
   
-    @media (max-width: 992px) {
-      width: 100%;
-      margin: 50px 0 25px 25px;
+    @media (max-width: 1115px) {
+      display: flex;
+      justify-content: center;
+    }
+  
+    @media (max-width: 720px) {
+      margin: rem(30px) auto;
+      width: 110%;
     }
     
-    @media (max-width: 776px) {
-      width: 100%;
-      margin: 50px 0 25px 25px;
+    @media (max-width: 415px) {
+      font-size: rem(14px);
     }
   }
 }
+
+.contact {
+  display: flex;
+  
+  @media (max-width: 1115px) {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+  
+  &__item {
+    margin: 0 rem(15px);
+  
+    @media (max-width: 762px) {
+      margin: rem(10px) 0;
+    }
+  }
+  
+  &__link {
+    margin-left: rem(9px);
+    font-weight: 300;
+    font-size: rem(21px);
+    line-height: rem(29px);
+    
+    @media (max-width: 415px) {
+      font-size: rem(12px);
+    }
+  }
+}
+
+.info-card__contact {
+  margin-bottom: rem(242px);
+  
+  @media (max-width: 1115px) {
+    margin-bottom: rem(20px);
+  }
+}
+
+.data {
+  display: flex;
+  flex-wrap: wrap;
+  
+  @media (max-width: 720px) {
+    justify-content: center;
+  }
+  
+  @media (max-width: 450px) {
+    justify-content: space-around;
+  }
+  
+  &__item {
+    @media (max-width: 1115px) {
+      margin-top: rem(30px);
+    }
+  
+    @media (max-width: 450px) {
+      width: 51%;
+    }
+    
+    &:nth-child(1) {
+      margin-right:rem(30px);
+      margin-bottom: rem(30px);
+  
+      @media (max-width: 450px) {
+        margin-right: 0;
+        margin-bottom: 0;
+      }
+    }
+  
+    &:nth-last-child(1) {
+      @media (max-width: 1115px) {
+        margin-left: rem(30px);
+      }
+  
+      @media (max-width: 450px) {
+        margin-left: 0;
+      }
+    }
+  }
+  
+  &__text {
+    font-weight: normal;
+    font-size: rem(16px);
+    
+    @media (max-width: 415px) {
+      font-size: rem(14px);
+    }
+  }
+  
+  &__title {
+    font-weight: 300;
+    font-size: rem(21px);
+    opacity: 50%;
+    padding: 15px 0;
+    
+    @media (max-width: 415px) {
+      font-size: rem(15px);
+    }
+  }
+  
+  &__underline {
+    width: 250px;
+    height: 0;
+    border: 1px solid #FFF;
+    
+    @media (max-width: 992px) {
+      width: 200px;
+    }
+    
+    @media (max-width: 415px) {
+      width: 150px
+    }
+  }
+}
+
+.button-send {
+  width: 270px / 558px * 100%;
+  font-size: rem(18px);
+}
+
+.form__button {
+  height: rem(60px);
+  margin: rem(50px) 0 rem(140px) rem(240px);
+  align-items: center;
+  justify-content: center;
+  
+  @media (max-width: 1115px) {
+    display: flex;
+    margin: rem(40px) auto;
+  }
+  
+  @media (max-width: 580px) {
+    width: 80%;
+  }
+}
+
